# earlighter

./: NATIVE_RUNTIME_SETUP.md  README.md  capacitor.config.json  package.json
.github/workflows/: build-apk.yml
native-runtime/: README.md
plugins/earlighter-llama-runtime/: README.md  package.json
plugins/earlighter-llama-runtime/android/: build.gradle
plugins/earlighter-llama-runtime/android/src/main/: AndroidManifest.xml
plugins/earlighter-llama-runtime/android/src/main/cpp/: CMakeLists.txt  earlighter_llama_jni.cpp
plugins/earlighter-llama-runtime/android/src/main/java/com/earlighter/llamaruntime/: EarlighterLlamaRuntimePlugin.java  LlamaNativeBridge.java
plugins/earlighter-whisper-runtime/: README.md  package.json
plugins/earlighter-whisper-runtime/android/: build.gradle
plugins/earlighter-whisper-runtime/android/src/main/: AndroidManifest.xml
plugins/earlighter-whisper-runtime/android/src/main/cpp/: CMakeLists.txt  earlighter_whisper_jni.cpp
plugins/earlighter-whisper-runtime/android/src/main/java/com/earlighter/whisperruntime/: EarlighterWhisperRuntimePlugin.java  WhisperNativeBridge.java
www/: app.js  index.html  native-runtime-notes.txt  styles.css
